re PR target/84266 (mmintrin.h intrinsic headers for PowerPC code fails on power9)

Fix PR 84266

From-SVN: r257571